force-app/main/default/objects/echosign_dev1__SIGN_Toolbar_Settings__c/echosign_dev1__SIGN_Toolbar_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Adobe Sign Toolbar Settings</label>
</CustomObject>