force-app/main/default/objects/echosign_dev1__SIGN_Toolbar_Settings__c/fields/echosign_dev1__Cancel_Agreement__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Cancel_Agreement__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Cancel Agreement</label>
    <type>Checkbox</type>
</CustomField>