force-app/main/default/objects/echosign_dev1__SIGN_Toolbar_Settings__c/fields/echosign_dev1__Cancel_Draft__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Cancel_Draft__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancel (Draft)</label>
    <type>Checkbox</type>
</CustomField>