force-app/main/default/objects/echosign_dev1__SIGN_Toolbar_Settings__c/fields/echosign_dev1__Disable_Bulk_Send_Agreement__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Disable_Bulk_Send_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Bulk Send Agreement</label>
    <type>Checkbox</type>
</CustomField>