force-app/main/default/objects/echosign_dev1__SIGN_Toolbar_Settings__c/fields/echosign_dev1__Disable_In_Flight_Host_Sign__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Disable_In_Flight_Host_Sign__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable this setting to hide the &apos;Host Signing&apos; button for in-flight agreements.</description>
    <inlineHelpText>Enable this setting to hide the &apos;Host Signing&apos; button for in-flight agreements.</inlineHelpText>
    <label>Disable In Flight Host Sign</label>
    <type>Checkbox</type>
</CustomField>