force-app/main/default/objects/echosign_dev1__SIGN_Toolbar_Settings__c/fields/echosign_dev1__Enable_On_Load_Action__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Enable_On_Load_Action__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable On Load Action</label>
    <type>Checkbox</type>
</CustomField>