force-app/main/default/objects/echosign_dev1__SIGN_Toolbar_Settings__c/fields/echosign_dev1__Send_Reminder__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Send_Reminder__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Send Reminder</label>
    <type>Checkbox</type>
</CustomField>