force-app/main/default/objects/echosign_dev1__SIGN_Toolbar_Settings__c/fields/echosign_dev1__Update_Status__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Update_Status__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Update Status</label>
    <type>Checkbox</type>
</CustomField>